# WordCounter

./: CMakeLists.txt  README.md  wordCounter.cpp
lib/: CMakeLists.txt
lib/Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp
lib/Lexer/test/: CMakeLists.txt  Lexer_testHello.cpp  Lexer_testLexer.cpp
lib/WordList/: CMakeLists.txt  WordList.cpp  WordList.hpp
lib/WordList/DynamicArray/: CMakeLists.txt  DynamicArray.hpp
lib/WordList/DynamicArray/test/: testAddElement.cpp  testInsertElement.cpp  testRemoveElement.cpp
lib/WordList/WordOccurrence/: CMakeLists.txt  WordOccurrence.cpp  WordOccurrence.hpp
lib/WordList/test/: testAddWord.cpp  testAssign.cpp  testEqual.cpp  testWordList.cpp
lib/test/: testRead.cpp
